fix: subnav alignemnt on mobile

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -166,6 +166,7 @@
       ul {
         list-style-type: none;
         margin: 0;
+        text-align: left;
         background: $color-main-lightest;
         border-top-right-radius: 5px;
         border-top-left-radius: 5px;
